

*lh-sources-3.13.9 (05 Apr 2014)

  05 Apr 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.9.ebuild:
  Bump to latest linux and genpatch release

*lh-sources-3.13.8 (01 Apr 2014)

  01 Apr 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.8.ebuild:
  Bump to latest linux and genpatch release

  28 Mar 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.12.14.ebuild,
  +lh-sources-3.12.15.ebuild:
  Bump to latest linux and genpatch release

*lh-sources-3.13.7 (25 Mar 2014)

  25 Mar 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.7.ebuild:
  Bump to latest aufs3, genpatches and linux release

  22 Mar 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.13.6.ebuild,
  +files/c2412d91c68426e22add16550f97ae5cd988a159.patch:
  Add backport patch for audit dmesg lines

  22 Mar 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.13.6.ebuild,
  +files/c2412d91c68426e22add16550f97ae5cd988a159.patch:
  Add backport patch for audit dmesg lines

*lh-sources-3.12.14 (20 Mar 2014)

  20 Mar 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.14.ebuild:
  Readd series 3.12

*lh-sources-3.13.6 (08 Mar 2014)

  08 Mar 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.6.ebuild:
  Bump to latest linux and genpatches release

  06 Mar 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.13.5.ebuild:
  Bump to latest aufs3 release

  25 Feb 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.12.9.ebuild,
  -lh-sources-3.12.10.ebuild, -lh-sources-3.12.11.ebuild,
  -lh-sources-3.13.0.ebuild, -lh-sources-3.13.1.ebuild,
  -lh-sources-3.13.2.ebuild, -lh-sources-3.13.3.ebuild,
  -lh-sources-3.13.4.ebuild, +lh-sources-3.13.5.ebuild:
  Bump to latest aufs3, linux and genpatch release

*lh-sources-3.13.4 (24 Feb 2014)

  24 Feb 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.4.ebuild:
  Bump to latest aufs3, linux and genpatch release

  15 Feb 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.12.10.ebuild,
  +lh-sources-3.12.11.ebuild: