@@ -5,6 +5,7 @@ DIST 0002-block-introduce-the-BFQ-v7r2-I-O-sched-for-3.13.patch1 186503 SHA256 8
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r2-for-3.12.0.patch1 34619 SHA256 231dc8192da7953bfcc4fbf89cc001bd4f93094a9c34b99110c21d826442e4e5 SHA512 49706a1d9dc1692a98ede49c4e85dba9760b2539b958ca698732c2f48e2ea1dc7fd0754a776c97d915de3cf61ccc09a02d2e787b8f89bbfde10da9f6794f5d17 WHIRLPOOL b29eb43a1c2365458e238119af54db868a5b3913736973a465f83dbb767726597a0c581ecdd2a3cbed3e6bf66c27ad5ee5376f59d662587fdf6ef0d9a19cbb62
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r2-for-3.13.0.patch1 34619 SHA256 254f8d1670234c2a9a99bec44ad0bafa9121b12f98ba78e3dae795b9e51faff7 SHA512 7eb1be54038c84b56d4461f4cad307eb71f1059cc5d0fdd1a77294f399a5a62d44510e152bb65273cff8e235c7f0bf12f2df0d5b787fa5acdea7b4bc477ac3f8 WHIRLPOOL ad3f022da8848024c70786a3c9de2f9243317fa285e0e04bfe068ba929464ea038201532e543cc267635380d92d266456b9cb202aea7654a4e78854969d5e8d3
 DIST README-3.12.15.BFQ 18624 SHA256 b596ec0d50782b80e443deb1eb42a7214ae1c65445a68fcee3f81a6f98fbfae4 SHA512 346493d6b04cddc26374dddddf0a177a91c12114bc030231e44e19f64d6a6e3a268a6006889036ca0deb6fdf25b053a76444876426aedeee1aafdbdbc903d58d WHIRLPOOL 1b176ab9fc26cb441285d6962f3a39814eaea2c421afdb75ed37c31b034f7a78609ce0ef37e5b97b42ca53d064101214ea61e857b59da0faaa5536005636ef02
+DIST README-3.12.16.BFQ 18624 SHA256 b596ec0d50782b80e443deb1eb42a7214ae1c65445a68fcee3f81a6f98fbfae4 SHA512 346493d6b04cddc26374dddddf0a177a91c12114bc030231e44e19f64d6a6e3a268a6006889036ca0deb6fdf25b053a76444876426aedeee1aafdbdbc903d58d WHIRLPOOL 1b176ab9fc26cb441285d6962f3a39814eaea2c421afdb75ed37c31b034f7a78609ce0ef37e5b97b42ca53d064101214ea61e857b59da0faaa5536005636ef02
 DIST README-3.13.5.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad0534e2d69f13c6339ef4 SHA512 85832448f132d5e637c80cc71b475b6b1c8c6cf7cadb34ec8311de66506f749adab9709053fad32129a773b17d9efab3a5ac9b3e63f02948cdacf0de5777c7f3 WHIRLPOOL 2837584a5d6e6528da6dbb7a0b23f73bd08b0d4d94fdd3b9c160952921b5e2dec0d5fb5807d9e869824c2a43fb9fad61bdf054e011f2d0f3746be09a469500a5
 DIST README-3.13.6.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad0534e2d69f13c6339ef4 SHA512 85832448f132d5e637c80cc71b475b6b1c8c6cf7cadb34ec8311de66506f749adab9709053fad32129a773b17d9efab3a5ac9b3e63f02948cdacf0de5777c7f3 WHIRLPOOL 2837584a5d6e6528da6dbb7a0b23f73bd08b0d4d94fdd3b9c160952921b5e2dec0d5fb5807d9e869824c2a43fb9fad61bdf054e011f2d0f3746be09a469500a5
 DIST README-3.13.7.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad0534e2d69f13c6339ef4 SHA512 85832448f132d5e637c80cc71b475b6b1c8c6cf7cadb34ec8311de66506f749adab9709053fad32129a773b17d9efab3a5ac9b3e63f02948cdacf0de5777c7f3 WHIRLPOOL 2837584a5d6e6528da6dbb7a0b23f73bd08b0d4d94fdd3b9c160952921b5e2dec0d5fb5807d9e869824c2a43fb9fad61bdf054e011f2d0f3746be09a469500a5
@@ -19,6 +20,8 @@ DIST deblob-check-3.12 601108 SHA256 e6c07b4220f86007ea31f9ed5d01023253296ddaa07
 DIST deblob-check-3.13 612002 SHA256 55a9264ad886259c9b20f1365245a993482a0f593d01e1824eddb748bc57e271 SHA512 64d93694acc9dd1046e967b0d0f285068cc248815a3c84c58aa4cb3b6bbc3fdcda4bce3b119b44f522a9cb6cfc10a0992cb5d19f880c7d6055c5c0ed3201905c WHIRLPOOL 1b196a945f5f07c78eff5e8742472b0d8ff570c7e11e2cd3d4d954f8fbd260b27b2779f2d794a30992e4d492b873d5f73163501a0c04372e0167e98640d587c5
 DIST genpatches-3.12-16.base.tar.xz 451760 SHA256 246225881c45795def61471eb5e68e65674d095ef0b57f54c0fdaede410842e7 SHA512 14b300065abd5530189e39ae1fa880be78edbf9172420033f769fa2e1d8f36b205fa2934fa42759e35433f12915969848e4a5edaef96c0b354cedc93b26b028c WHIRLPOOL 27a927b06ad531f40538bde94e5ac68a44685a201eb7b01af006e8963c1d1bbb5276ea8469b691f1aa5d06562718ba0b6261b7e79af887ee896b915da9476a43
 DIST genpatches-3.12-16.extras.tar.xz 18152 SHA256 976f1955368e5bac0bfefe97fc6fc53a67ad003da86c22a0eef8860fc8439909 SHA512 edb22af4c538cd02fc4d43cfe5d2eff887a2ba636c50428c2794722cf02fea3bf22b251ddb81da7d2a934331b4d0231fdeb68fd15e6556bf93cc5d743fbdc923 WHIRLPOOL 6dc333619fb6e70f760adab02c820c58295d3d55f6d60252183f3b979d5cffe78fab04f671dbdada6e1134decfefa8440b28def7ca1a68fc2e9fca41db2a329c
+DIST genpatches-3.12-17.base.tar.xz 466564 SHA256 58fb8b23531f92b1a3e470fe6cea875094effaa182d5c9fecb6bac38ff36299d SHA512 8a20d94b7583bea5b6c0098cb48a54ae5798a44a2b5a8f44c7a88bb93f01f0ad81bcb95f121adfc940ad96ba5d2366ec57ddb5db8eb633e35f92a9cdbc45d931 WHIRLPOOL f42b302243db1c082b28e98cea4853a3fd49d17bb0995aee1a7384880fc29a6bb5de0304fc53850213b4d81787bb2a818ff3c5978cf0fe007ab7cce610d2b3e0
+DIST genpatches-3.12-17.extras.tar.xz 18224 SHA256 d5980aa35d89459789efcebc39c933b3b223a0a3f3c3ef6b82f25e8f720c9038 SHA512 556906edeb2e6825cbb22aa6b058142dd3cfcf1026bf32ab094065c8bf539d114042f3edb91587e01af9a980c25220e33006d19a515863803dab0614c022fcc0 WHIRLPOOL efbc9ce40054e07d1dd9b788ef93b52e160b83c87859a4744c038a61ec346cacb16ecfd528138a3e65a376e2ef2c9fd56a112486937482747d822b580add4d7e
 DIST genpatches-3.13-10.base.tar.xz 235084 SHA256 917269ea4b97798d1c5c412dc2d31a24be0ed4b589cb9a56f604c1e9fae3bd2f SHA512 80869c9da4ff9171b95e7c58a307d9865cdec6a48deb5a53eeeb3a7f358b957f74246bc4a621e9e6009b283dc2cf158f7dc76acec910cf5125e0023595a71ae4 WHIRLPOOL 18cafbf80f012873b58f663f04f6d47e4c476bb5baaf802ae936661b1cf9d286ed73b892ae33afa50d4405e02688e537b2591f93890da4da145b0d3ebfbd53d5
 DIST genpatches-3.13-10.extras.tar.xz 18184 SHA256 701e71e53b4a96907c2d9258a86c4abe49caf94430e4a0706ccb241ade3d8715 SHA512 a3f224a85dd0ddf03d2ff734388b592de0320653664c181923d243b1f439ef7ee9278ab835425ddf6574901bfe5605e9ca71c53184f1bc9f2b971331e6015275 WHIRLPOOL 5881bd3a9dff0e0a6aa54895701bcaf688900da77f075d99c27bc9ddd45b6ba3fff41becefa121698e2b01b15bce83897c68266a1facf9222e1c8436a17f1ed3
 DIST genpatches-3.13-11.base.tar.xz 253240 SHA256 d35db3455fc0d01efc9ada22b955c42d0ae724bbf23d109df990ad76bfb545b3 SHA512 a8b063573169a222cdd5771822748372c808e9f88924b5d30746ebcfba588f23edffc6717b0fb4a2bb26346e9c9d9dca761d135090ba40a266ca8a6203ca645a WHIRLPOOL b2f1d18e3e2e0a97c9f7a80327efb4d522d62ae6b5dd934cb62ba9b8a0653008fa75d109aaef3e6825a986901c3d82e73c8cd448121901642aa1e01cd5e0aeed
